First pass at endpoint. Having problems with an array as parameter
