# api/openapi_server/models/__init__.py
@@ -3,6 +3,8 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from openapi_server.models.assay_name_request import AssayNameRequest
+from openapi_server.models.assay_name_request_name import AssayNameRequestName
 from openapi_server.models.assay_type_property_info import AssayTypePropertyInfo
 from openapi_server.models.codes_codes_obj import CodesCodesObj
 from openapi_server.models.concept_detail import ConceptDetail
